Finish Control Plane API Testing
Expanded 404 and 409 errors to be more verbose and return some useful
information to the client.  Adds in various error case scenarios for
control planes.
